# esp-can

./: .gitignore  README.md  partitions.csv  sdkconfig.defaults.esp32s3
.cache/clangd/index/: CMakeCCompilerId.c.727C09C22D0EBB95.idx  animimg001.c.1D1653FA2302E4A9.idx  animimg002.c.8510977F389B4E4E.idx  animimg003.c.43019A2F0E92F9D0.idx  can_mon.c.26F1B37A96476F43.idx  can_mon.h.9CB6DC30B6432D3A.idx  esp_lcd_touch.c.16B7C32F37E69BFA.idx  esp_lcd_touch.h.1DC8C1EA383D2EEA.idx  esp_lcd_touch_gt911.c.88427D1598812058.idx  esp_lcd_touch_gt911.h.92D8A9E45DC2D8A5.idx  gifdec.c.F19689A1A202CB8C.idx  gifdec.h.C1EE8290C5A0CF88.idx  img_benchmark_cogwheel_alpha16.c.E21B25A510CB659E.idx  img_benchmark_cogwheel_argb.c.4C03D96F2A9F457E.idx  img_benchmark_cogwheel_chroma_keyed.c.AE3EB42B6AF1AECD.idx  img_benchmark_cogwheel_indexed16.c.37453344621914F9.idx  img_benchmark_cogwheel_rgb.c.BD0770C2FEB492D1.idx  img_benchmark_cogwheel_rgb565a8.c.0F4350FD607FC7FB.idx  img_bulb_gif.c.059E087560B9398F.idx  img_caret_down.c.64B1F5638440C22F.idx  img_clothes.c.3922F873F57BEF62.idx  img_cogwheel_alpha16.c.0F4E918CD2676D97.idx  img_cogwheel_argb.c.08871F377AF3F02B.idx  img_cogwheel_chroma_keyed.c.2DB2A2E5414FD912.idx  img_cogwheel_indexed16.c.1E488FF8F72C8E1D.idx  img_cogwheel_rgb.c.2BB09EC1977547E7.idx  img_demo_widgets_avatar.c.D16D5799BEB8149E.idx  img_emoji_F617.c.907FBED011EE434C.idx  img_hand.c.C98F87715A8A15C7.idx  (+614 more)
main/: CMakeLists.txt  Kconfig.projbuild
main/include/: can_mon.h  ui_canmon.h  waveshare_twai_port.h
main/src/: can_mon.c  main.c  ui_canmon.c  waveshare_twai_port.c
